# weather_project

./: pyproject.toml
src/weather_project/: connection.py  docker-compose.yaml  insert_data.py
src/weather_project/airflow/dags/: orchestrator.py
src/weather_project/api-request/: api_request.py  connection.py  insert_data.py
src/weather_project/dbt/: .user.yml  profiles.yml
src/weather_project/dbt/my_project/models/mart/: daily_avg.sql
src/weather_project/dbt/my_project/models/sources/: sources.yml
src/weather_project/dbt/my_project/models/staging/: stg_weather_data.sql
src/weather_project/postgres/: airflow_init.sql
