[project]
name = "weather-project"
version = "0.1.0"
description = ""
authors = [
    {name = "harry-hdh",email = "hdh997@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15 || >3.15"
dependencies = [
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "apache-airflow (>=3.2.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "weather_project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
